# council-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
config/_shared/: synthesis_format_pai.md
config/councils/security/: council.json  council_members.md  experts.json  ideal_state.md  synthesis_format.md
config/councils/security/scenarios/: vpn-blog-post.md
council/: __init__.py  cli.py  compose.py  constants.py  engine_base.py  engine_cursor.py  engine_litellm.py  engines.py  output.py  packs.py  prompts.py  transcript.py
tests/: test_packs.py  test_pure_functions.py
